[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = ""
authors = ["DukeNgn <triduc2311m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
